@startuml

title __PUBLISHER's Class Diagram__\n

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class BoardPublisher {
            + boardLoadPublish()
            + boardWritePublish()
            + BoardPublisher()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class ChatPublisher {
            + messageLoadPublish()
            + messageWritePublish()
            + groupLoadPublish()
            + ChatPublisher()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class ContactPublisher {
            + forgotPasswordPublish()
            + ContactPublisher()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class MagazinePublisher {
            + magazineLoadPublish()
            + magazineWritePublish()
            + MagazinePublisher()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class NoticePublisher {
            + noticeLoadPublish()
            + noticeCheckPublish()
            + noticeWritePublish()
            + NoticePublisher()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class ResetPublisher {
            + forgotPasswordPublish()
            + resetPasswordPublish()
            + resetEmailPublish()
            + ResetPublisher()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class SignPublisher {
            + signInPublish()
            + signUpPublish()
            + signUpPublish()
            + SignPublisher()
        }
      }
    }
  }
  

  BoardPublisher o-- LoadService : loadService
  BoardPublisher o-- StoreService : writeService
  ChatPublisher o-- LoadService : loadService
  ChatPublisher o-- StoreService : writeService
  ContactPublisher o-- MailService : mailService
  MagazinePublisher o-- LoadService : readService
  MagazinePublisher o-- StoreService : storeService
  NoticePublisher o-- LoadService : loadService
  NoticePublisher o-- StoreService : storeService
  NoticePublisher o-- CheckService : checkService
  ResetPublisher o-- CheckService : checkService
  ResetPublisher o-- ResetService : resetService
  ResetPublisher o-- MailService : mailService
  ResetPublisher o-- EncodeService : encodeService
  SignPublisher o-- CheckService : checkService
  SignPublisher o-- StoreService : storeService
  SignPublisher o-- SessionService : sessionService
  SignPublisher o-- EncodeService : encodeService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
